[gd_scene load_steps=2 format=3 uid="uid://brilj8bu2njt2"]

[ext_resource type="Script" uid="uid://bpxm65wmx7m3f" path="res://components/completion_zone_gradual/CompletionZoneGradual.gd" id="1_i30os"]

[node name="CompletionZoneGradual" type="Area2D" groups=["GradualZones"]]
collision_layer = 2
collision_mask = 2
script = ExtResource("1_i30os")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
autostart = true

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
